--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,26 +1,25 @@
 name: CI devops 2023
-
 on:
+  #to begin you want to launch this job in main and develop
   push:
-    branches:
-      - main
+    branches: master
   pull_request:
 
 jobs:
   test-backend:
     runs-on: ubuntu-22.04
     steps:
-      - uses: actions/checkout@v2.7.0
+      #checkout your github code using actions/checkout@v2.5.0
+      - uses: actions/checkout@v2.4.2
 
-      - name: Set up Node.js
-        uses: actions/setup-node@v2
-        with:
-          node-version: 16
-
+      #do the same with another action (actions/setup-java@v3) that enable to setup jdk 17
       - name: Set up JDK 17
         uses: actions/setup-java@v3
         with:
-          java-version: 17
+          distribution: "adopt"
+          java-version: "17"
 
+      #finally build your app with the latest command
       - name: Build and test with Maven
-        run: mvn clean install
+        run: mvn clean verify
+        working-directory: backend/simpleapi/simple-api-student
