--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,25 +1,55 @@
-name: CI devops 2023
+name: Login to DockerHub
+
 on:
-  #to begin you want to launch this job in main and develop
   push:
-    branches: main
+    branches:
+      - main
   pull_request:
 
 jobs:
   test-backend:
     runs-on: ubuntu-22.04
     steps:
-      #checkout your github code using actions/checkout@v2.5.0
-      - uses: actions/checkout@v2.4.2
+      - name: Checkout code
+        uses: actions/checkout@v2.4.2
 
-      #do the same with another action (actions/setup-java@v3) that enable to setup jdk 17
       - name: Set up JDK 17
         uses: actions/setup-java@v3
         with:
           distribution: "adopt"
           java-version: "17"
 
-      #finally build your app with the latest command
       - name: Build and test with Maven
         run: mvn clean verify
         working-directory: backend/simpleapi/simple-api-student
+
+  build-and-push-docker-image:
+    needs: test-backend
+    runs-on: ubuntu-22.04
+    steps:
+      - name: Login to DockerHub
+        run: docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
+
+      - name: Checkout code
+        uses: actions/checkout@v2.5.0
+
+      - name: Build and push backend image
+        uses: docker/build-push-action@v3
+        with:
+          context: backend/simpleapi/simple-api-student
+          push: ${{ github.ref == 'refs/heads/main' }}
+          tags: ${{secrets.DOCKERHUB_USERNAME}}/tp-devops-simple-api_backend:latest
+
+      - name: Build and push database image
+        uses: docker/build-push-action@v3
+        with:
+          context: database
+          push: ${{ github.ref == 'refs/heads/main' }}
+          tags: ${{secrets.DOCKERHUB_USERNAME}}/tp-devops-simple-api_database:latest
+
+      - name: Build and push httpd image
+        uses: docker/build-push-action@v3
+        with:
+          context: http
+          push: ${{ github.ref == 'refs/heads/main' }}
+          tags: ${{secrets.DOCKERHUB_USERNAME}}/tp-devops-simple-api_httpd:latest
