--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,28 +1,34 @@
-name: Login to DockerHub
+# This is a GitHub Actions workflow for CI/CD in 2023.
 
+# The workflow is triggered when there are pushes to the 'master' branch and pull requests.
+name: CI devops 2023
 on:
+  # Trigger the workflow on pushes to the 'master' branch.
   push:
     branches:
       - main
-  pull_request:
+  # Also, trigger the workflow on pull requests.
 
 jobs:
   test-backend:
     runs-on: ubuntu-22.04
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v2.4.2
+      # Step 1: Check out your GitHub code using actions/checkout@v2.4.2.
+      - uses: actions/checkout@v2.4.2
 
+      # Step 2: Set up JDK 17 using actions/setup-java@v3.
       - name: Set up JDK 17
         uses: actions/setup-java@v3
         with:
-          distribution: "adopt"
-          java-version: "17"
+          distribution: "adopt"      # Specify the Java distribution to use (e.g., AdoptOpenJDK).
+          java-version: "17"         # Specify the Java version (e.g., Java 17).
 
+      # Step 3: Build your app with the 'mvn clean verify' command.
       - name: Build and test with Maven
-        run: mvn clean verify
-        working-directory: backend/simpleapi/simple-api-student
+        run: mvn clean verify         # Execute the 'mvn clean verify' command.
+        working-directory: backend/simpleapi/simple-api-student  # Set the working directory for the Maven build.
 
+  # Define a job to build and push Docker images.
   build-and-push-docker-image:
     needs: test-backend
     runs-on: ubuntu-22.04
